@@ -1,3 +1,7 @@
+2011-03-24 Erwin Waterlander <waterlan@xs4all.nl>
+	* dos2unix.c/unix2dos.c: Changed options --follow, --no-follow,
+	  to  --follow-symlink,  --replace-symlink,  --skip-symlink
+
 2011-03-23 Chris Wilson <cygwin@cwilson.fastmail.fm>
 	* dos2unix.c/unix2dos.c: New options --follow and --no-follow.
 	  In follow mode dos2unix writes to the symlink target, instead
